[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Titlescreen.gd" type="Script" id=1]
[ext_resource path="res://src/EminentHearers.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/Button.tres" type="Theme" id=3]

[node name="Titlescreen" type="Control"]
margin_right = 800.0
margin_bottom = 450.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 177.0
margin_right = 800.0
margin_bottom = 450.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
margin_left = 288.0
margin_top = 28.0
margin_right = 512.0
margin_bottom = 244.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="CenterContainer/VBox"]
margin_right = 224.0
margin_bottom = 51.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="CenterContainer/VBox"]
margin_top = 55.0
margin_right = 224.0
margin_bottom = 106.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="CenterContainer/VBox"]
margin_top = 110.0
margin_right = 224.0
margin_bottom = 161.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="CenterContainer/VBox"]
margin_top = 165.0
margin_right = 224.0
margin_bottom = 216.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/VBox/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CenterContainer/VBox/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBox/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CenterContainer/VBox/Quit" to="." method="_on_Quit_pressed"]
